cif/org.eclipse.escet.cif.tests/tests/checks/SvgFileReferenceTestCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
 - A boolean literal is used:
   - In constant "x":
     - const bool x = true;
                      ^
